--- a/css/main.css
+++ b/css/main.css
@@ -34,15 +34,15 @@ header {
 }
 
 #column-1 {
-  background: #d5d5d5;
+  background: darkcyan;
 }
 
 #column-2 {
-  background: #d5d5d5;
+  background: lavender;
 }
 
 #column-3 {
-  background: #d5d5d5;
+  background: goldenrod;
 }
 
 
@@ -60,23 +60,23 @@ footer {
 
 @media (min-width: 768px) {
   header {
-    background-color: ;
+    background-color: floralwhite;
   }
 
   #column-1 {
-    background-color: ;
+    background-color: darkturquoise;
   }
 
   #column-2 {
-    background-color: ;
+    background-color: deepskyblue;
   }
 
   #column-3 {
-    background-color: ;
+    background-color: dodgerblue;
   }
 
   footer {
-    background-color: ;
+    background-color: floralwhite;
   }
   
 }
@@ -85,23 +85,23 @@ footer {
 /*---------- Desktops ----------*/
 @media (min-width: 1200px) {
   header {
-    background-color: ;
+    background-color: lavenderblush;
   }
 
   #column-1 {
-    background-color: ;
+    background-color: lemonchiffon;
   }
 
   #column-2 {
-    background-color: ;
+    background-color: lightblue;
   }
 
   #column-3 {
-    background-color: ;
+    background-color: lightpink;
   }
 
   footer {
-    background-color: ;
+    background-color: lavenderblush;
   }
    
 }
