--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,17 @@ footer {
 
   #column-1 {
     background-color: darkturquoise;
+    width: 50%;
   }
 
   #column-2 {
     background-color: deepskyblue;
+    width: 50%;
   }
 
   #column-3 {
     background-color: dodgerblue;
+    width: 100%;
   }
 
   footer {
@@ -90,14 +93,17 @@ footer {
 
   #column-1 {
     background-color: lemonchiffon;
+    width:33.3333%;
   }
 
   #column-2 {
     background-color: lightblue;
+    width:33.3333%;
   }
 
   #column-3 {
     background-color: lightpink;
+    width:33.3333%;
   }
 
   footer {
